--- a/ms_3_res_disc_concl.Rmd
+++ b/ms_3_res_disc_concl.Rmd
@@ -22,6 +22,8 @@ PLOS ONE editorial decisions do not rely on perceived significance or impact, so
 
 [results] The two datasets have notably different taxonomic (Fig 1A) and regional (Figs 1B, 1C) coverage.  AquaMaps encompasses a broader range of taxa than IUCN, as IUCN spatial data files are only available for select taxonomic groups that have been comprehensively assessed. While species numbers in both datasets peak in tropical latitudes near the equator, species counts for IUCN maps drop quickly beyond 30°N and 30°S, while AquaMaps includes distribution of species well into temperate latitudes.  The longitude frequency plots show a slight shift in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps.  
 
+![](figures/Fig_1.png)
+
 > __Fig 1.__ (A) Number and proportion of species by taxa included in each dataset.  Overlapping species are dominated by bony fishes (`r format(n_bonyfish, big.mark = ',')` species, primarily tropical taxa) and corals (`r format(n_corals, big.mark = ',')` species).  (B, C) Global marine species count per 0.5° cell according to (B) AquaMaps and (C) IUCN.  The margin frequency plots show relative species count per cell at each latitude and longitude. 
 
 
@@ -68,6 +70,8 @@ The mean distribution alignment for species included in both datasets was `r dis
 Where two independent methods predict presence (or absence) of a species in the same location, we assume a higher confidence in the accuracy of that prediction.  Where one method predicts presence while the other predicts absence, we can investigate potential sources of commission and omission errors to refine our understanding of the species' range.  Understanding and addressing these sources of error provides guidance to improve predictions of species range even when only one source of spatial data is available.
 -->
 
+![](figures/Fig_2.png)
+
 > __Fig 2.__ (A) Distribution alignment (overlap of smaller range within larger) versus area ratio (the ratio of smaller range area to the larger range area) for `r format(n_spp_both, big.mark = ',')` species included in both IUCN and AquaMaps datasets.  The upper right quadrant (quadrant 1) comprises species whose maps largely agree (better than mean value) in both spatial distribution and the extent of described ranges (n = `r q1_count`; `r round(q1_count/nrow(spp_map_pairs) * 100, 1)` %).
 The upper left quadrant (quadrant 2) comprises species whose maps agree well in distribution, but disagree in area
 (n = `r q2_count`; `r round(q2_count/nrow(spp_map_pairs) * 100, 1)` %).
@@ -100,6 +104,8 @@ The lower left quadrant (quadrant 4) indicates species for which the map pairs a
 
 [results] Fig 3A shows aggregated ranges of the 463 coral species mapped in the IUCN dataset, with their ranges broken into proportional area deeper and shallower than 200 m.  According to IUCN descriptions, none of these species is indicated to occur deeper than 200 m, and 94% are confined to waters shallower than 50 m; seven of the mapped species had no reported depth information.  Clipping coral ranges to shallower than 200 m eliminated an average of 47.6% of the total predicted area while still allowing for a generous estimate of suitable habitat.
 
+![](figures/Fig_3.png)
+
 > __Fig 3.__ (A) Aggregate map combining ranges of the 463 coral species mapped in the IUCN dataset, showing raw ranges and ranges clipped to 200 m depth. (B) Alignment quadrant breakdown of paired map coral species using original data from IUCN and AquaMaps (as in Fig 2B) and the same species with IUCN ranges clipped to 200 m depth.
 
 [results] In constraining coral ranges to appropriately shallow waters, we see a strong increase in the apparent alignment of species maps between IUCN and AquaMaps.  Using the original quadrant definitions from Fig 2B, we see in Fig 3B a massive shift in 354 paired-map coral species due to constraining coral depths to 200 m.  Membership in the "well-aligned" quadrant jumped from 22.4% to 76.2%, with a corresponding decrease in all other quadrants.  By excluding the unsuitable areas from IUCN's extent of occurrence, we eliminate preventable commission errors and more closely approximate the area of occupancy described by AquaMaps.  See Fig SXXX to examine the shifts of individual species among the quadrants.
@@ -109,6 +115,8 @@ The lower left quadrant (quadrant 4) indicates species for which the map pairs a
 ## Georegional constraint exploration
 
 [results] From the entirety of the AquaMaps dataset, we identified 3,577 Indo-Pacific species whose equatorial distributions (between 25° S and 20° N) encounter a range limit at 175° W.  This longitudinal boundary created a western limit for 369 species, and an eastern limit for 3,208 species.  A clear discontinuity in species distributions of the 3,208 west-limited species (Fig 4) matches perfectly with FAO region 77; other discontinuities are apparent at other FAO boundaries, despite these boundaries not being actively studied in the analysis.  Similar discontinuities were clear when mapping the west-limited species.
+
+![](figures/Fig_4.png)
 
 > __Fig 4.__ Composite map showing AquaMaps predicted ranges for 3,208 species whose equatorial distribution encounters an eastern discontinuity exactly at 175° W, the boundary between FAO Major Fishing Areas 71 and 77 (shown in blue).  Other FAO area boundaries create additional clear discontinuities.
 
@@ -164,6 +172,8 @@ _Given that only `r p_spp_both_ohi`% of Red List-assessed species are included i
 Klein et al. [-@klein_shortfalls_2015] compare the global distribution of species to the global distribution of marine protected areas to assess how well current MPAs overlap with species ranges and identify which species fall through gaps in protection.  The study relied on the 2014 version of the AquaMaps database, using a probability of occurrence threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  They found that the global MPA network leaves 90.5% of marine species with less than 5% of their overall range represented within MPAs, and 1.4% of species have no protection at all (i.e., "gap" species).
 
 We recalculated the amount of under-protected and gap species using either IUCN or AquaMaps data (using the 2015 AquaMaps data and a 0% threshold to more closely approximate the extent of occurrence represented by IUCN data, <a href = '#fig4'>Fig 4</a>).  We found a five-fold increase in the proportion of gap species (6.4% of species vs. 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).
+
+![](figures/Fig_5.png)
 
 > __Fig 5.__  Percent of species range covered by MPAs based upon methods in Klein et al. (2015).  Scenario 1 replicates the original results, measuring protected range of species in AquaMaps 2014 dataset, with a 50% presence threshold, against the 2014 World Database of Protected Areas, filtered for IUCN categories I-IV that overlap marine areas.  Scenario 2 updates the results using AquaMaps 2015, showing very small changes despite the inclusion of an additional 5,545 species.  Scenario 3, using 2015 AquaMaps data, drops the presence threshold to zero, showing an expected decrease in gap species, but also a decrease in species with 5% or greater protected range.  Scenario 4 examines species MPA coverage using only the IUCN dataset.
 
